# help2table

./: Cargo.toml  readme.md
src/: main.rs  openai.rs
