[package]
name = "help2table"
version = "0.1.0"
edition = "2021"
documentation = "https://docs.rs/help2table"
repository = "https://github.com/Sett17/help2table"
license = "MIT"
description = "A tool to convert the output of the help command to a markdown table"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
arboard = "3.2.0"
clap = { version = "4.2.1", features = ["derive"] }
colored = "2.0.0"
crossterm = "0.26.1"
reqwest = "0.11.16"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
terminal-supports-emoji = "0.1.3"
tiktoken-rs = "0.3.3"
tokio = { version = "1.27.0", features = ["full"] }
